  
  o Allow entry of variable names in enter table dialog (suggestion of Beatriz Lacruz).
  
  o Improved import of Stata and SPSS data files and provision to import SAS b7dat files.
  
  o Added right-click context menus to text entry boxes.
  
  o Getting Started manual is now supplied as a vignette (with help from Manuel Munoz Marquez).
  
  
  o Refactored Commander() code.
  
  o Separators in plug-in menus can now be placed more precisely, if necessary (following a problem reported by Manuel Munoz Marquez).
  
  o Reworked handling of statistical models in plug-ins.
  
  o Boostrap dialog will now plot bootstrap samples.
  
  o Parameter estimate correlations are now reported with VIFs.
  
  o Small interface improvements.
  
Changes to Version 2.3-2

  o Fixes to Spanish translation (from Manual Munoz Marquez).
  
  o Updated Spanish translation of Getting Started manual (thanks to Manual Munoz Marquez).
  
  o Updated Slovenian translation (thanks to Matjaz Jeran).

Changes to Version 2.3-1

  o Removed dependency of rglwidgets, no longer necessary.
  
  o Fixes to Catalan translation (from Manel Salamero).
  
  o Updated Basque and German translations (thanks to Joserra Rueda and Fritz Leisch).
  
Changes to Version 2.3-0

  o Added .rtf output to options for RMarkdown reports.
  
  o Added bootstrap dialog for "lm"s and "glm"s.
  
  o Added delta-method dialog.
  
  o Added view data dialog, supporting viewing a subset of the active data set, and sort data set dialog (suggestions of Sung-il Cho).
  
  o Added connect option to plot means dialog (suggestion of Graham Smith).
  
  o Added Welch F-test option to one-way ANOVA dialog.
  
  o Added compare coefficients dialog.
  
  o The Shapiro-Wilk test for normality dialog is replaced by a more general normality-tests dialog.
  
  o Dialogs for plotting continuous distributions now allow the user to specify regions to fill.
  
  o Various small improvements/bug fixes.
  