@@ -1,6 +1,6 @@
 # Graphs menu dialogs
 
-# last modified 2017-01-24 by J. Fox
+# last modified 2017-04-04 by J. Fox
 #  applied patch to improve window behaviour supplied by Milan Bouchet-Valat 2011-09-22
 
 # the following functions improved by Miroslav Ristic 2013-07: barGraph, indexPlot, boxPlot, 
@@ -9,43 +9,43 @@
 
 indexPlot <- function () {
     defaults <- list(initial.x = NULL, initial.type = "spikes", initial.identify = "auto",
-        initial.id.n="2", initial.tab=0, 
-        initial.ylab=gettextRcmdr("<auto>"), initial.main=gettextRcmdr("<auto>"))
+                     initial.id.n="2", initial.tab=0, 
+                     initial.ylab=gettextRcmdr("<auto>"), initial.main=gettextRcmdr("<auto>"))
     dialog.values <- getDialog("indexPlot", defaults)
     initializeDialog(title = gettextRcmdr("Index Plot"), use.tabs=TRUE)
-    xBox <- variableListBox(dataTab, Numeric(), title = gettextRcmdr("Variable (pick one)"), 
-        initialSelection = varPosn (dialog.values$initial.x, "numeric"))
+    xBox <- variableListBox(dataTab, Numeric(), title = gettextRcmdr("Variable (pick one or more)"), 
+                            selectmode = "multiple", initialSelection = varPosn (dialog.values$initial.x, "numeric"))
     optionsFrame <- tkframe(optionsTab)    
     optFrame <- ttklabelframe(optionsFrame, labelwidget=tklabel(optionsFrame, text = gettextRcmdr("Plot Options"),
-        font="RcmdrTitleFont", foreground=getRcmdr("title.color")))
+                                                                font="RcmdrTitleFont", foreground=getRcmdr("title.color")))
     parFrame <- ttklabelframe(optionsFrame, labelwidget=tklabel(optionsFrame, text = gettextRcmdr("Plot Labels"),
-        font="RcmdrTitleFont", foreground=getRcmdr("title.color")))
+                                                                font="RcmdrTitleFont", foreground=getRcmdr("title.color")))
     typeVariable <- tclVar(dialog.values$initial.type)
     styleFrame <- tkframe(optFrame)
     radioButtons(styleFrame, name = "type", buttons = c("spikes", "points"),
-        labels = gettextRcmdr(c("Spikes", "Points")), title = gettextRcmdr("Style of plot"),
-        initialValue = dialog.values$initial.type)
+                 labels = gettextRcmdr(c("Spikes", "Points")), title = gettextRcmdr("Style of plot"),
+                 initialValue = dialog.values$initial.type)
     identifyPointsFrame <- tkframe(optFrame)
     radioButtons(identifyPointsFrame, name = "identify", buttons = c("auto", "mouse", 
-        "not"), labels = gettextRcmdr(c("Automatically", 
-            "Interactively with mouse", "Do not identify")), title = gettextRcmdr("Identify Points"), 
-        initialValue = dialog.values$initial.identify)    
+                                                                     "not"), labels = gettextRcmdr(c("Automatically", 
+                                                                                                     "Interactively with mouse", "Do not identify")), title = gettextRcmdr("Identify Points"), 
+                 initialValue = dialog.values$initial.identify)    
     id.n.Var <- tclVar(dialog.values$initial.id.n) 
     npointsSpinner <- tkspinbox(identifyPointsFrame, from=1, to=10, width=2, textvariable=id.n.Var)
     ylabVar <- tclVar(dialog.values$initial.ylab)
     mainVar <- tclVar(dialog.values$initial.main)
     ylabEntry <- ttkentry(parFrame, width = "25", textvariable = ylabVar)
     ylabScroll <- ttkscrollbar(parFrame, orient = "horizontal",
-        command = function(...) tkxview(ylabEntry, ...))
+                               command = function(...) tkxview(ylabEntry, ...))
     tkconfigure(ylabEntry, xscrollcommand = function(...) tkset(ylabScroll,
-        ...))
+                                                                ...))
     tkgrid(labelRcmdr(parFrame, text = gettextRcmdr("y-axis label")), ylabEntry, sticky = "ew", padx=6)
     tkgrid(labelRcmdr(parFrame, text =""), ylabScroll, sticky = "ew", padx=6)
     mainEntry <- ttkentry(parFrame, width = "25", textvariable = mainVar)
     mainScroll <- ttkscrollbar(parFrame, orient = "horizontal",
-        command = function(...) tkxview(mainEntry, ...))
+                               command = function(...) tkxview(mainEntry, ...))
     tkconfigure(mainEntry, xscrollcommand = function(...) tkset(mainScroll,
-        ...))
+                                                                ...))
     tkgrid(labelRcmdr(parFrame, text = gettextRcmdr("Graph title")), mainEntry, sticky = "ew", padx=6)
     tkgrid(labelRcmdr(parFrame, text=""), mainScroll, sticky = "ew", padx=6)
     onOK <- function() {
@@ -65,28 +65,39 @@ indexPlot <- function () {
         main <- if (main == gettextRcmdr("<auto>"))
             ""
         else paste(", main=\"", main, "\"", sep = "")
-        putDialog ("indexPlot", list(initial.x = x, initial.type = tclvalue(typeVariable), initial.identify = identify,
-            initial.id.n = id.n, initial.tab=tab,
-            initial.ylab = tclvalue(ylabVar), initial.main = tclvalue(mainVar)))
         closeDialog()
-        if (length(x) == 0) {
+        n.x <- length(x)
+        if (n.x == 0) {
             errorCondition(recall = indexPlot, message = gettextRcmdr("You must select a variable"))
             return()
         }
+        if (n.x > 5){
+            response <- RcmdrTkmessageBox(message=sprintf(gettextRcmdr("You have selected %d variables.\nDo you want to proceed?"), n.x),
+                                          icon="question", type="okcancel", default="cancel")
+            if ("cancel" == tclvalue(response)) {
+                tkfocus(CommanderWindow())
+                return()
+            }
+        }
+        putDialog ("indexPlot", list(initial.x = x, initial.type = tclvalue(typeVariable), initial.identify = identify,
+                                     initial.id.n = id.n, initial.tab=tab,
+                                     initial.ylab = tclvalue(ylabVar), initial.main = tclvalue(mainVar)))
         type <- if (tclvalue(typeVariable) == "spikes") "h" else "p"
         method <- if (identify == "mouse") "identify" else "y"
         id.n.use <- if (identify == "not") 0 else id.n
         .activeDataSet <- ActiveDataSet()
         if (identify == "mouse") {
             RcmdrTkmessageBox(title = "Identify Points", message = paste(gettextRcmdr("Use left mouse button to identify points,\n"), 
-                gettextRcmdr(if (MacOSXP()) 
-                    "esc key to exit."
-                    else "right button to exit."), sep = ""), icon = "info", 
-                type = "ok")
+                                                                         gettextRcmdr(if (MacOSXP()) 
+                                                                             "esc key to exit."
+                                                                             else "right button to exit."), sep = ""), icon = "info", 
+                              type = "ok")
         }
-        command <- paste("with(", .activeDataSet, ", indexplot(", x, ", type='", type,
-            "', id.method='", method, "', id.n=", id.n.use, ", labels=rownames(", .activeDataSet, ")",
-            ylab, main, "))", sep="") # Modification
+        x <- if (n.x == 1) paste0("'", x, "'")
+        else paste0("c(", paste(paste0("'", x, "'"), collapse=", "), ")")
+        command <- paste0("indexplot(", .activeDataSet, "[,", x, ", drop=FALSE], type='", type,
+                          "', id.method='", method, "', id.n=", id.n.use,
+                          ylab, main, ")") # Modification
         if (identify == "mouse") command <- suppressMarkdown(command)
         doItAndPrint(command)
         activateMenus()
